Added Chrome app link and analytics event trackign

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <title>Tupacsum &raquo; Alternative to Lorem Ipsum Generator</title>
-<meta name="description" content="Tupacsum is the best alternative Lorem Ipsum generator for web designers because Tupac was the best! Who cares about a Latin looking Lispum generator filler text?! Tupacsum adds awesomeness to your site.">
+<meta name="description"
+	content="Tupacsum is the best alternative Lorem Ipsum generator for web designers because Tupac was the best! Who cares about a Latin looking Lispum generator filler text?! Tupacsum adds awesomeness to your site.">
 
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/tupacsum-icon-57.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/tupacsum-icon-72.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/tupacsum-icon-114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="57x57"
+	href="img/tupacsum-icon-57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72"
+	href="img/tupacsum-icon-72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114"
+	href="img/tupacsum-icon-114.png" />
 
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
 <meta name="viewport" content="width=device-width">
@@ -15,15 +19,14 @@
 <body>
 	<div class="wrapper">
 		<div class="col col_4">
-			<img src="img/tupac.jpg" class="stretchy" />
+			<img src="img/tupac.jpg" class="stretchy" alt="Tupacsum Lorem Ipsum Generator - with lyrics from Tupac Shakur"/>
 			<p class="copyright">
 				&copy; 2013 <a href="http://www.rodrigo-silveira.com">Rodrigo Silveira</a>. Lyrics by Tupac Shakur.
-			</p>
+			<br />&raquo; <a href="https://chrome.google.com/webstore/detail/tupacsum/dokiogadbpnilohbdnhahpoeebljielo">Get Tupacsum Google Chrome App</a></p>
 		</div>
 		<div class="col col_8">
 			<h1>Tupacsum</h1>
-			<p class="desc">A Lorem Ipsum generator for the web designer that
-				keeps it real</p>
+			<p class="desc">A Lorem Ipsum generator for the web designer that keeps it real</p>
 
 			<select id="paragraphCount">
 				<option value="1">1</option>
